Upload artificat to nexus code